Melhorias no home, adição de tabela no tabela.html, duas novas divs criadas na ficha.html

--- a/pages/faleConosco.html
+++ b/pages/faleConosco.html
@@ -28,8 +28,7 @@
             <a href="login.html"><li class="navItens">Login</li></a>
             <a href="ficha.html"><li class="navItens">Sua Ficha</li></a>
             <a href="faleConosco.html"
-              ><li class="navItens">Fale Conosco</li></a
-            >
+              ><li class="navItens">Fale Conosco</li></a>
           </ul>
         </div>
       </nav>
