--- a/pages/ficha.html
+++ b/pages/ficha.html
@@ -51,25 +51,30 @@
         <span class="title-span">Qual seu nivel?</span>
         <div class="check">
    <select name="" id="sele">
-     <option >selecione</option>
+     <option value="selecione">Selecione</option>
      <option value="iniciante">Iniciante</option>
-     <option value="intermedio">intermedio</option>
-     <option value="avançado">avançado</option>
+     <option value="intermedio">Intermediário</option>
+     <option value="avançado">Avançado</option>
    </select>
         <div>
           <button id="btn" class="button">
             Fazer Minha ficha
           </button>
         </div>
-        <table></table>
-<textarea name="" id="text" cols="30" rows="10"></textarea>
-        
+      </div>
+      <div >
+        <p id="text"></p>
       </div>
     </main>
     <div  id="pdf" class="area-pdf">
       <h1 class="title">Sua ficha se encontra aqui em baixo!</h1>
       <div class="linha"></div>
-      <embed src="/pdf/treinoFicha.pdf" type="application/pdf" width="300px" height="300px">
+      <h2 class="title">Divisão dos Treinos</h2>
+      <p class="text-sub">Os treinos estão divididos em duas partes, pois geralmente treinamos 2 músculos
+        por dia, como Peito e tríceps. Veja o que faz mais sentido para você.
+      </p>
+      <div class="linha"></div>
+      <embed src="/pdf/tabela.pdf" type="application/pdf" width="300px" height="300px">
     </div>
     </body>
     
