--- a/pages/tabela.html
+++ b/pages/tabela.html
@@ -36,7 +36,7 @@ depois de pronto converti esse html em jpg e em seguida pdf para usar na página
       html {
         margin: 0;
         font-family: sans-serif;
-        background-color: gray;
+        background-color: rgb(51, 51, 51);
       }
       .table {
         width: 600px;
@@ -55,9 +55,9 @@ depois de pronto converti esse html em jpg e em seguida pdf para usar na página
     <table class="table table-dark">
       <thead>
         <tr>
-          <th scope="col">Treino A/1</th>
-          <th scope="col">treino B/1</th>
-          <th scope="col">Treino C</th>
+          <th scope="col">Treino Peito</th>
+          <th scope="col">Treino Costas</th>
+          <th scope="col">Treino Pernas</th>
         </tr>
       </thead>
       <tbody>
@@ -86,9 +86,9 @@ depois de pronto converti esse html em jpg e em seguida pdf para usar na página
     <table class="table table-dark">
       <thead>
         <tr>
-          <th scope="col">Treino A/2</th>
-          <th scope="col">treino B/2</th>
-          <th scope="col">Treino C/2</th>
+          <th scope="col">Treino Tríceps</th>
+          <th scope="col">Treino Bíceps</th>
+          <th scope="col"> Pernas e Panturrilha</th>
         </tr>
       </thead>
       <tbody>
@@ -114,5 +114,27 @@ depois de pronto converti esse html em jpg e em seguida pdf para usar na página
         </tr>
       </tbody>
     </table>
+    <div class="table-final">
+       <table class="table table-dark" style="text-align: center;width: 300px;">
+      <thead>
+        <tbody>
+          <th scope="col">Treino de Ombro</th>
+        </tbody>
+        <tr>
+          <td>Desenvolvimento de ombro</td>
+        </tr>
+        <tr>
+          <td>elevação lateral com halteres</td>
+        </tr>
+        <tr>
+          <td>Elevação frontal</td>
+        </tr>
+        <tr>
+          <td>Crucifixo inverso</td>
+        </tr>
+      </thead>
+    </table>
+    </div>
+   
   </body>
 </html>
