--- a/pages/home.html
+++ b/pages/home.html
@@ -39,14 +39,21 @@
                 <div class="linha"></div>
                 <p class="text-principal">
                   Olá é novo por aqui?
-                  relaxa a gente te explica como funciona.
+                  Relaxa a gente te explica como funciona.
                   Sabe quando você está em em dúvida do treino que vai fazer na academia?
-                  ou é iniciante e não tem uma ficha de treino para seguir, bom estamos aqui para
+                  Ou é iniciante e não tem uma ficha de treino para seguir, bom estamos aqui para
                   isso, nosso site vai fazer essa ficha para você. BORA!
-                  lembrando que para ter um treino adequado você deve procurar um educador
-                  físico, pôs ele fará um treino de acordo com suas necessidades, aqui você terá uma média. 
+                  Lembrando que para ter um treino adequado você deve procurar um educador
+                  físico, pois ele fará um treino de acordo com suas necessidades, aqui você terá uma média. 
                 </p>
             </div>
+            <div class="linha"></div>
+            <div>
+                <p class="text-sub">
+                    Futuramente mais funções serão adiconadas, como "login" e o "Fale conosco", mas por enquanto você já consegue acessar sua ficha!
+                </p> 
+            </div>
+           
         </section>
     </main>
     <footer>
@@ -56,12 +63,12 @@
        </p>
        <div class="linha"></div>
        <div class="footer-itens-area">
-       <a class="footer-itens" href="#">
+       <a class="footer-itens" href="https://www.instagram.com/denilsonjunior__/">
         <img src="https://img.icons8.com/ios/48/ffffff/instagram-new--v1.png"/>
        </a> 
-       <a class="footer-itens" href="#">
+       <a class="footer-itens" href="https://www.linkedin.com/in/denilson-junior-848188222/">
         <img src="https://img.icons8.com/ios-glyphs/50/ffffff/linkedin.png"/></a>
-       <a class="footer-itens" href="#">
+       <a class="footer-itens" href="https://github.com/denilsonjj">
         <img src="https://img.icons8.com/ios-glyphs/50/ffffff/github.png"/></a>
        </div>
         </div>
