atualização de links

--- a/pages/ficha.html
+++ b/pages/ficha.html
@@ -18,13 +18,13 @@
   <body>
     <header>
       <nav>
-        <a href="home.html">
+        <a href="index.html">
           <h1 class="title">Ficha<span class="title-span">Fácil</span></h1></a
         >
         <div class="logo"></div>
         <div class="area-itens">
           <ul class="itens">
-            <a href="home.html"><li class="navItens">Home</li></a>
+            <a href="index.html"><li class="navItens">Home</li></a>
             <a href="login.html"><li class="navItens">Login</li></a>
             <a href="ficha.html"><li class="navItens">Sua Ficha</li></a>
             <a href="faleConosco.html"
