--- a/pages/faleConosco.html
+++ b/pages/faleConosco.html
@@ -19,20 +19,18 @@
   <body>
     <header>
       <nav>
-        <a href="index.html">
-          <h1 class="title">Ficha<span class="title-span">Fácil</span></h1></a
-        >
-        <div class="area-itens">
-          <ul class="itens">
-            <a href="index.html"><li class="navItens">Home</li></a>
-            <a href="login.html"><li class="navItens">Login</li></a>
-            <a href="ficha.html"><li class="navItens">Sua Ficha</li></a>
-            <a href="faleConosco.html"
-              ><li class="navItens">Fale Conosco</li></a>
-          </ul>
-        </div>
+          <a href="/index.html">
+          <h1 class="title"> Ficha<span class="title-span">Fácil</span></h1></a>
+            <div class="area-itens">
+              <ul class="itens">
+                  <a href="/index.html"><li class="navItens">Home</li></a>
+                  <a href="/pages/login.html"><li class="navItens">Login</li></a> 
+                  <a href="/pages/ficha.html"><li class="navItens">Sua Ficha</li></a>
+                  <a href="/pages/faleConosco.html"><li class="navItens">Fale Conosco</li></a>
+              </ul>
+          </div>
       </nav>
-    </header>
+  </header>
     <main>
       <section class="section">
         <h1 class="title">Contato</h1>
