troca de placeholder e aumento do input

--- a/pages/ficha.html
+++ b/pages/ficha.html
@@ -42,7 +42,7 @@
         <div class="area-input1">
           <input type="text" id="name" placeholder="nome" />
 
-          <input type="number" max="50" min="18" id="age" placeholder="anos" />
+          <input type="number" max="50" min="18" id="age" placeholder="idade" />
         </div>
         <span class="title-span">Qual seu nivel?</span>
         <div class="check">
