--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
        </p>
        <div class="linha"></div>
        <div class="footer-itens-area">
-       <a class="footer-itens" href="https://www.instagram.com/denilsonjunior__/">
+       <a class="footer-itens" href="https://www.instagram.com/denilsonjunior__/" target="_blank">
         <img src="https://img.icons8.com/ios/48/ffffff/instagram-new--v1.png"/>
        </a> 
-       <a class="footer-itens" href="https://www.linkedin.com/in/denilson-junior-848188222/">
+       <a class="footer-itens" href="https://www.linkedin.com/in/denilsonjj/" target="_blank">
         <img src="https://img.icons8.com/ios-glyphs/50/ffffff/linkedin.png"/></a>
-       <a class="footer-itens" href="https://github.com/denilsonjj">
+       <a class="footer-itens" href="https://github.com/denilsonjj" target="_blank">
         <img src="https://img.icons8.com/ios-glyphs/50/ffffff/github.png"/></a>
        </div>
         </div>
