ajustando responsividade e barra de navegação

--- a/pages/login.html
+++ b/pages/login.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <nav>
-          <a href="/index.html">
+          <a href="/index.html" class="a">
           <h1 class="title"> Ficha<span class="title-span">Fácil</span></h1></a>
           <div class="area-itens">
               <ul class="itens">
